--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class = "unitDropdown">
         <button id = "dropButton" class = "button">Change temperature units</button>
         <div id = "unitList" class = "myDropDown">
-            <p id = "metric" class = "unitOption">Celcius</p>
+            <p id = "metric" class = "unitOption">Celsius</p>
             <p id = "imperial" class = "unitOption">Farenheit</p>
             <p id = "default" class = "unitOption">Kelvin</p>
         </div>       
@@ -28,7 +28,7 @@
     <div id = "mainInfo"><h1> <span id = "displayCity">City</span></h1>
     <h3 id = "time">time</h3>
     </div>
-    <div id = "mainTemp"><h3><span id = "tempValue" class = "tempNumber">10</span> ° <span id = "tempUnits">celcius </span></h3>
+    <div id = "mainTemp"><h3><span id = "tempValue" class = "tempNumber">10</span> ° <span id = "tempUnits">celsius </span></h3>
     </div>
      <div id = "tempIcon"></div>
      <div id = "mainDescription"><h3><span id = "weatherDescription">Description</span></h3> </div>   
